feat: support multiple class lock sessions
